gcc/testsuite/rust/rustc/ui/consts/issue-91434.rs
fn main() {
    [9; [[9E; h]]];
// { dg-error ".E0425." "" { target *-*-* } .-1 }
// { dg-error ".E0425." "" { target *-*-* } .-2 }
}

